--- a/scheduler/calendars.ipynb
+++ b/scheduler/calendars.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "c0f0c387",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "bf11ecfd",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "0f01d230",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,13 +39,37 @@
     "            event['end_time'] = component.decoded(\"dtend\").strftime(\"%Y-%m-%d %H:%M:%S\")\n",
     "            events.append(event)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Übung zu Quantentechnologie UE, Gruppe 1 Johannes Früh', 'start_time': '2022-11-30 08:00:00', 'end_time': '2022-11-30 09:00:00'}, {'name': 'Quantentechnologie VO, Standardgruppe', 'start_time': '2022-11-30 09:00:00', 'end_time': '2022-11-30 11:00:00'}, {'name': 'Image Guided Surgery (IN2286) VI, Standardgruppe', 'start_time': '2022-11-30 13:00:00', 'end_time': '2022-11-30 15:00:00'}, {'name': 'Deutsch als Fremdsprache A2.1 SE, Keza GERMAN MATTERS (GAR Präsenz)', 'start_time': '2022-11-30 17:00:00', 'end_time': '2022-11-30 18:30:00'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(events)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3.9",
    "language": "python",
-   "name": "python3"
+   "name": "python3.9"
   },
   "language_info": {
    "codemirror_mode": {
@@ -60,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
