--- a/scheduler/playground.ipynb
+++ b/scheduler/playground.ipynb
@@ -6,7 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime, timedelta"
+    "import math\n",
+    "from icalendar import Calendar, Event, vCalAddress, vText\n",
+    "from pathlib import Path\n",
+    "import os\n",
+    "import pytz"
    ]
   },
   {
@@ -15,10 +19,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt1 = datetime.strptime(\"2022-11-19 06:00:00\", \"%Y-%m-%d %H:%M:%S\")\n",
-    "dt2 = datetime.strptime(\"2022-11-19 04:00:00\", \"%Y-%m-%d %H:%M:%S\")\n",
-    "dt3 = datetime.strptime(\"2022-11-19 12:30:00\", \"%Y-%m-%d %H:%M:%S\")\n",
-    "dummy_datetimes = [dt1, dt2, dt3]"
+    "from mvg_api import *\n",
+    "import json\n",
+    "import pprint\n",
+    "\n",
+    "def generate_route(start, dest, time=None, arrival_time=False):\n",
+    "    \n",
+    "    # transfer the start and dest address to latitude, longitude coordinate\n",
+    "    start_coordinates = (get_locations(start)[0]['latitude'], get_locations(start)[0]['longitude'])\n",
+    "    dest_coordinates = (get_locations(dest)[0]['latitude'], get_locations(dest)[0]['longitude'])\n",
+    "    \n",
+    "    # get the routes\n",
+    "    routes = get_route(start_coordinates, dest_coordinates, time=time, arrival_time=arrival_time, \n",
+    "    max_walk_time_to_start=None, max_walk_time_to_dest=None, change_limit=None, ubahn=True, bus=True, tram=True, sbahn=True)\n",
+    "\n",
+    "    ## output variables\n",
+    "    route_choose = None\n",
+    "\n",
+    "    # time = departure time\n",
+    "    if arrival_time == False:\n",
+    "        route_choose = 0\n",
+    "\n",
+    "    # time = arrival time\n",
+    "    else:\n",
+    "        for j in range(len(routes)):\n",
+    "            end_time = routes[-1-j][\"arrival_datetime\"]\n",
+    "            if end_time < time:\n",
+    "                route_choose = -1-j\n",
+    "                break\n",
+    "\n",
+    "    # \tstart_time:\n",
+    "    start_time = routes[route_choose][\"departure_datetime\"]\n",
+    "    # \tend_time: \n",
+    "    end_time = routes[route_choose][\"arrival_datetime\"]\n",
+    "\n",
+    "    #   model: U-Bahn | S-Bahn | Bus | Tram | Walking \"connectionPartType\" \"FOOTWAY\" or \"TRANSPORTATION\"\n",
+    "    model = []\n",
+    "    for i in range(len(routes[route_choose][\"connectionPartList\"])):\n",
+    "        model.append(routes[route_choose][\"connectionPartList\"][i][\"connectionPartType\"])\n",
+    "\n",
+    "\t# \tstation_line: number \"label\" Ex \"U6\"\n",
+    "    station_line = []\n",
+    "    for i in range(len(routes[route_choose][\"connectionPartList\"])):\n",
+    "        if \"label\" in routes[route_choose][\"connectionPartList\"][i]:\n",
+    "            station_line.append(routes[route_choose][\"connectionPartList\"][i][\"label\"])\n",
+    "\n",
+    "    # \tplatform: number, (gleis) \"departurePlatform\"\n",
+    "    platform = []\n",
+    "    for i in range(len(routes[route_choose][\"connectionPartList\"])):\n",
+    "        if \"departurePlatform\" in routes[route_choose][\"connectionPartList\"][i]:\n",
+    "            platform.append(routes[route_choose][\"connectionPartList\"][i][\"departurePlatform\"])\n",
+    "\n",
+    "\t# \tname_of_station: string, \"connectionPartList\" \"from\" \"name\" \"to\" \"name\"\n",
+    "    name_of_station_start = None\n",
+    "    for i in range(len(routes[route_choose][\"connectionPartList\"])):\n",
+    "        if \"name\" in routes[route_choose][\"connectionPartList\"][i][\"from\"]:\n",
+    "            name_of_station_start = routes[route_choose][\"connectionPartList\"][i][\"from\"][\"name\"]\n",
+    "            break\n",
+    "    name_of_station_dest = None\n",
+    "    for i in range(len(routes[route_choose][\"connectionPartList\"])):\n",
+    "        if \"name\" in routes[route_choose][\"connectionPartList\"][-1-i][\"to\"]:\n",
+    "            name_of_station_dest = routes[route_choose][\"connectionPartList\"][-1-i][\"to\"][\"name\"]\n",
+    "            break\n",
+    "\t    \n",
+    "    route_json = pprint.pformat(routes[-1]).replace(\"'\", '\"')\n",
+    "    with open('route.json', 'w') as f:\n",
+    "        f.write(route_json)\n",
+    "\n",
+    "    return {\"start_time\": start_time,\n",
+    "            \"end_time\": end_time,\n",
+    "            \"model\": model,\n",
+    "            \"station_line\": station_line,\n",
+    "            \"platform\": platform,\n",
+    "            \"start_station\": name_of_station_start,\n",
+    "            \"end_station\": name_of_station_dest\n",
+    "    }\n",
+    "\n"
    ]
   },
   {
@@ -27,30 +103,259 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dummy_datetimes.sort()"
+    "class Activity:\n",
+    "    def __init__(self, name=None, start_time=None, end_time=None, duration=None, location=None, priority=None):\n",
+    "        self.name = name\n",
+    "        if (start_time == None) and (end_time != None):\n",
+    "            self.start_time = end_time - duration\n",
+    "        else:\n",
+    "            self.start_time = start_time\n",
+    "        if (end_time == None) and (start_time != None):\n",
+    "            self.end_time = start_time + duration\n",
+    "        else:\n",
+    "            self.end_time = end_time\n",
+    "        if (duration == None) and (start_time != None) and (end_time != None):\n",
+    "            self.duration = end_time - start_time\n",
+    "        else:\n",
+    "            self.duration = duration\n",
+    "        self.location = location\n",
+    "        self.priority = priority\n",
+    "\n",
+    "class EmptySlot:\n",
+    "    def __init__(self, start_time, end_time, prev_activity, next_activity):\n",
+    "        self.start_time = start_time\n",
+    "        self.end_time = end_time\n",
+    "        self.prev_activity = prev_activity\n",
+    "        self.next_activity = next_activity\n",
+    "\n",
+    "class Schedule:\n",
+    "    def __init__(self):\n",
+    "        self.activities = []\n",
+    "    \n",
+    "    def add_activity(self, activity):\n",
+    "        self.activities.append(activity)\n",
+    "        self._sort_based_on_start_time()\n",
+    "\n",
+    "    def _sort_based_on_start_time(self):\n",
+    "        self.activities.sort(key=lambda x: x.start_time)\n",
+    "    \n",
+    "    def find_empty_slots(self):  \n",
+    "        empty_slots = []\n",
+    "        for i in range(len(self.activities)-1):\n",
+    "            prev_act = self.activities[i]\n",
+    "            next_act = self.activities[i+1]\n",
+    "            duration = (next_act.start_time - prev_act.end_time).seconds\n",
+    "            if duration > 0:\n",
+    "                empty_slots.append(EmptySlot(start_time=prev_act.end_time, end_time=next_act.start_time, prev_activity=prev_act, next_activity=next_act))\n",
+    "        return empty_slots\n",
+    "    \n",
+    "    def print_schedule(self):\n",
+    "        for act in self.activities:\n",
+    "            print(act.start_time, \"-\", act.end_time, \":\", act.name)\n",
+    "    \n",
+    "    def convert_to_json(self):\n",
+    "        return [{\"name\": act.name, \"start_time\": act.start_time, \"end_time\": act.end_time, \"duration\": act.duration, \"location\": act.location} for act in self.activities]\n",
+    "\n",
+    "def make_activity_objects(activities):\n",
+    "    processed_activities = []\n",
+    "    for act in activities:\n",
+    "        name = None\n",
+    "        if act[\"name\"] != None:\n",
+    "            name = act[\"name\"]\n",
+    "        location = None\n",
+    "        if act[\"location\"] != None:\n",
+    "            location = act[\"location\"]\n",
+    "        start_time = None\n",
+    "        if act[\"start_time\"] != None:\n",
+    "            start_time = datetime.strptime(act[\"start_time\"], \"%Y-%m-%d %H:%M:%S\")\n",
+    "        end_time = None\n",
+    "        if act[\"end_time\"] != None:\n",
+    "            end_time = datetime.strptime(act[\"end_time\"], \"%Y-%m-%d %H:%M:%S\")\n",
+    "        duration = None\n",
+    "        if act[\"duration\"] != None:\n",
+    "            duration = timedelta(minutes=act[\"duration\"])\n",
+    "        processed_act = Activity(name=name, start_time=start_time, end_time=end_time, duration=duration, location=location)\n",
+    "        processed_activities.append(processed_act)\n",
+    "    return processed_activities\n",
+    "\n",
+    "def extract_uni_activities(calendar_file):\n",
+    "    file = open(calendar_file, 'rb')\n",
+    "    ecal = Calendar.from_ical(file.read())\n",
+    "    uni_activities = []\n",
+    "    for component in ecal.walk():\n",
+    "        if component.name == 'VEVENT':\n",
+    "            if component.decoded(\"dtstart\").strftime(\"%Y-%m-%d\") == datetime.strptime('2022-11-30', \"%Y-%m-%d\").strftime(\"%Y-%m-%d\"):\n",
+    "                name = str(component.get('summary'))\n",
+    "                start_time = component.decoded(\"dtstart\").replace(tzinfo=None)\n",
+    "                end_time = component.decoded(\"dtend\").replace(tzinfo=None)\n",
+    "                uni_activities.append(Activity(name=name, start_time=start_time, end_time=end_time, location=\"Garching Forschungszentrum\"))\n",
+    "    return uni_activities\n",
+    "\n",
+    "def assign_activity_priorities(activities):\n",
+    "    for activity in activities:\n",
+    "        if (((activity.start_time != None) and (activity.end_time != None)) or\n",
+    "        ((activity.duration != None) and (activity.end_time != None)) or\n",
+    "        ((activity.duration != None) and (activity.start_time != None)) or\n",
+    "        ((activity.duration != None) and (activity.start_time != None) and (activity.end_time != None))):\n",
+    "            activity.priority = 1\n",
+    "        elif (activity.start_time == None) and (activity.end_time == None) and (activity.duration != None) and (activity.location != None):\n",
+    "            activity.priority = 2\n",
+    "        elif (activity.start_time == None) and (activity.end_time == None) and (activity.duration != None) and (activity.location == None):\n",
+    "            activity.priority = 3\n",
+    "        else:\n",
+    "            activity.priority = 4\n",
+    "    activities.sort(key=lambda x: x.priority)\n",
+    "\n",
+    "def get_route_duration(loc1, loc2):\n",
+    "    return 0\n",
+    "\n",
+    "def create_schedule(remaining_activities, uni_activities=None, travel_activities=None):\n",
+    "    schedule = Schedule()\n",
+    "    \n",
+    "    # Insert uni activities to schedule\n",
+    "    if uni_activities != None:\n",
+    "        for act in uni_activities:\n",
+    "            schedule.add_activity(act)\n",
+    "        \n",
+    "    # Insert travel activities to schedule\n",
+    "    if travel_activities != None:\n",
+    "        for act in travel_activities:\n",
+    "            schedule.add_activity(act)\n",
+    "        \n",
+    "    # Assign priority to remaining activities\n",
+    "    assign_activity_priorities(remaining_activities)\n",
+    "    \n",
+    "    # Schedule remaining activities based on priority\n",
+    "    for act in remaining_activities:\n",
+    "        print(act.name, act.priority)\n",
+    "        empty_slots = schedule.find_empty_slots()\n",
+    "        \n",
+    "        if act.priority == 1:\n",
+    "            schedule.add_activity(act)\n",
+    "            \n",
+    "        elif act.priority == 2:\n",
+    "            min_total_duration = math.inf\n",
+    "            min_activity = None\n",
+    "            for slot in empty_slots:\n",
+    "                travel_time1 = get_route_duration(slot.prev_activity.location, act.location)\n",
+    "                travel_time2 = get_route_duration(act.location, slot.next_activity.location)\n",
+    "                total_duration = travel_time1 + act.duration + travel_time2\n",
+    "                if total_duration < min_total_duration:\n",
+    "                    total_duration = min_total_duration\n",
+    "                    min_activity = Activity(name=act.name, start_time=slot.prev_activity.end_time, duration=act.duration, location=act.duration)\n",
+    "            schedule.add_activity(min_activity)\n",
+    "        \n",
+    "        elif act.priority == 3:\n",
+    "            for slot in empty_slots:\n",
+    "                slot_duration = slot.end_time - slot.start_time\n",
+    "                if act.duration < slot_duration:\n",
+    "                    schedule.add_activity(Activity(name=act.name, start_time=slot.start_time, duration=act.duration))\n",
+    "                    break\n",
+    "    \n",
+    "    return schedule"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_schedule(request):\n",
+    "     # Get to-do list\n",
+    "    remaining_activities = make_activity_objects(request[\"data\"])\n",
+    "\n",
+    "    # Get uni activities\n",
+    "    uni_activities = extract_uni_activities('personal_20221119_172719.ics')\n",
+    "\n",
+    "    # Get travel activities\n",
+    "    departure_time = request[\"departure_time\"]\n",
+    "    departure_place = request[\"departure_place\"]\n",
+    "    arrival_time = request[\"arrival_time\"]\n",
+    "    arrival_place = request[\"arrival_place\"]\n",
+    "    departure_route = generate_route(start=departure_place, dest=uni_activities[0].location, time=departure_time, arrival_time=False)\n",
+    "    departure_activity = Activity(name=\"Departure\", start_time=departure_route[\"start_time\"], end_time=departure_route[\"end_time\"])\n",
+    "    arrival_route = generate_route(start=uni_activities[-1].location, dest=arrival_place, time=arrival_time, arrival_time=True)\n",
+    "    arrival_activity = Activity(name=\"Arrival\", start_time=arrival_route[\"start_time\"], end_time=arrival_route[\"end_time\"])\n",
+    "    travel_activities = [departure_activity, arrival_activity]\n",
+    "\n",
+    "    # Create schedule\n",
+    "    schedule = create_schedule(remaining_activities, uni_activities, travel_activities)\n",
+    "    schedule.print_schedule()\n",
+    "\n",
+    "    return schedule.convert_to_json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime, timedelta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "travel activities\n",
+      "Departure 2022-11-30 06:03:00\n",
+      "Arrival 2022-11-30 22:40:00\n",
+      "Reading 3\n",
+      "Laundry 3\n",
+      "2022-11-30 06:03:00 - 2022-11-30 06:41:00 : Departure\n",
+      "2022-11-30 06:41:00 - 2022-11-30 07:41:00 : Reading\n",
+      "2022-11-30 08:00:00 - 2022-11-30 09:00:00 : Übung zu Quantentechnologie UE, Gruppe 1 Johannes Früh\n",
+      "2022-11-30 09:00:00 - 2022-11-30 11:00:00 : Quantentechnologie VO, Standardgruppe\n",
+      "2022-11-30 11:00:00 - 2022-11-30 11:30:00 : Laundry\n",
+      "2022-11-30 13:00:00 - 2022-11-30 15:00:00 : Image Guided Surgery (IN2286) VI, Standardgruppe\n",
+      "2022-11-30 17:00:00 - 2022-11-30 18:30:00 : Deutsch als Fremdsprache A2.1 SE, Keza GERMAN MATTERS (GAR Präsenz)\n",
+      "2022-11-30 22:40:00 - 2022-11-30 22:51:00 : Arrival\n"
+     ]
+    }
+   ],
+   "source": [
+    "request = {\"data\": [{\"name\": \"Reading\", \"location\": None, \"start_time\": None, \"end_time\": None, \"duration\": 60},\n",
+    "                   {\"name\": \"Laundry\", \"location\": None, \"start_time\": None, \"end_time\": None, \"duration\": 30}],\n",
+    "          \"departure_time\": datetime.strptime(\"2022-11-30 06:00:00\", \"%Y-%m-%d %H:%M:%S\"),\n",
+    "          \"arrival_time\": datetime.strptime(\"2022-11-30 23:00:00\", \"%Y-%m-%d %H:%M:%S\"),\n",
+    "          \"departure_place\": \"Hohenzollernplatz\",\n",
+    "          \"arrival_place\": \"Garching\"}\n",
+    "schedule_json = get_schedule(request)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[datetime.datetime(2022, 11, 19, 4, 0),\n",
-       " datetime.datetime(2022, 11, 19, 6, 0),\n",
-       " datetime.datetime(2022, 11, 19, 12, 30)]"
+       "<bound method Schedule.convert_to_json of <__main__.Schedule object at 0x10e8aa700>>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dummy_datetimes"
+    "schedule_json"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -62,9 +367,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python3.9",
    "language": "python",
-   "name": "python3"
+   "name": "python3.9"
   },
   "language_info": {
    "codemirror_mode": {
@@ -76,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
