fixed but not fixed

--- a/scheduler/playground.ipynb
+++ b/scheduler/playground.ipynb
@@ -65,7 +65,11 @@
     "                break\n",
     "\n",
     "    # \tstart_time:\n",
-    "    start_time = routes[route_choose][\"departure_datetime\"]\n",
+    "    start_time = None\n",
+    "    if arrival_time == False:\n",
+    "        start_time = time\n",
+    "    else:\n",
+    "        start_time = routes[route_choose][\"departure_datetime\"]\n",
     "    # \tend_time: \n",
     "    end_time = routes[route_choose][\"arrival_datetime\"]\n",
     "\n",
@@ -210,14 +214,10 @@
     "                a = prev_act.end_time\n",
     "            else:\n",
     "                a = prev_act.travel_plan.arrivals[-1]\n",
-    "            \n",
-    "            print(\"a\", a)\n",
-    "            \n",
+    "\n",
     "            b = next_act.start_time\n",
-    "            print(\"b\", b)\n",
     "                \n",
     "            duration = (b - a).seconds\n",
-    "            print(\"duration\", duration)\n",
     "            if duration < 0:\n",
     "                duration = 0\n",
     "                \n",
@@ -327,7 +327,7 @@
     "                    \n",
     "                travel_time2 = 0\n",
     "                if act.location != slot.next_activity.location:\n",
-    "                    route = generate_route(start=act.location, dest=slot.next_activity.location, time=slot.start_time+travel_time1+act.duration, arrival_time=False)\n",
+    "                    route = generate_route(start=act.location, dest=slot.next_activity.location, time=slot.prev_activity.travel_plan.arrivals[-1]+act.duration, arrival_time=False)\n",
     "                    travel_time2 = route[\"duration\"]\n",
     "                    route2 = TravelPlan(model=route[\"model\"], station_line=route[\"station_line\"], platform=route[\"platform\"], start_station=route[\"start_station\"], end_station=route[\"end_station\"], departures=route[\"departures\"], arrivals=route[\"arrivals\"])\n",
     "                               \n",
@@ -340,12 +340,10 @@
     "        \n",
     "        elif act.priority == 3:\n",
     "            for slot in empty_slots:\n",
+    "                if slot.end_time < slot.start_time:\n",
+    "                    slot.end_time = slot.start_time\n",
     "                slot_duration = (slot.end_time - slot.start_time).seconds\n",
-    "                print(\"slot start time\", slot.start_time)\n",
-    "                print(\"slot end time\", slot.end_time)\n",
     "                if act.duration.seconds < slot_duration:\n",
-    "                    print(slot.prev_activity.name)\n",
-    "                    print(slot.next_activity.name)\n",
     "                    schedule.add_activity(Activity(name=act.name, start_time=slot.start_time, duration=act.duration))\n",
     "                    break\n",
     "    \n",
@@ -400,23 +398,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a 2022-11-30 09:00:00\n",
-      "b 2022-11-30 09:00:00\n",
-      "duration 0\n",
-      "a 2022-11-30 11:00:00\n",
-      "b 2022-11-30 13:00:00\n",
-      "duration 7200\n",
-      "a 2022-11-30 15:00:00\n",
-      "b 2022-11-30 17:00:00\n",
-      "duration 7200\n",
-      "2022-11-30 06:03:00 - 2022-11-30 06:41:00 : Departure\n",
+      "2022-11-30 06:00:00 - 2022-11-30 06:41:00 : Departure\n",
       "--- Travel plan ---\n",
       "Start station: Hohenzollernplatz\n",
       "(FOOTWAY)  -  ( 2022-11-30 06:03:00 - 2022-11-30 06:08:00 )\n",
@@ -436,13 +425,13 @@
       "(FOOTWAY)  -  ( 2022-11-30 11:44:00 - 2022-11-30 11:47:00 )\n",
       "End station: Laim\n",
       "\n",
-      "2022-11-30 11:43:00 - 2022-11-30 12:13:00 : Exercise\n",
+      "2022-11-30 11:47:00 - 2022-11-30 12:17:00 : Exercise\n",
       "--- Travel plan ---\n",
       "Start station: Laim\n",
-      "(FOOTWAY)  -  ( 2022-11-30 12:09:00 - 2022-11-30 12:10:00 )\n",
-      "(TRANSPORTATION) S1 - 2 ( 2022-11-30 12:10:00 - 2022-11-30 12:20:00 )\n",
-      "(TRANSPORTATION) U6 - U-Bahn Gleis 1 ( 2022-11-30 12:24:00 - 2022-11-30 12:49:00 )\n",
-      "(FOOTWAY)  -  ( 2022-11-30 12:49:00 - 2022-11-30 12:51:00 )\n",
+      "(FOOTWAY)  -  ( 2022-11-30 12:14:00 - 2022-11-30 12:16:00 )\n",
+      "(TRANSPORTATION) S3 - 3 ( 2022-11-30 12:16:00 - 2022-11-30 12:26:00 )\n",
+      "(TRANSPORTATION) U6 - U-Bahn Gleis 1 ( 2022-11-30 12:34:00 - 2022-11-30 12:59:00 )\n",
+      "(FOOTWAY)  -  ( 2022-11-30 12:59:00 - 2022-11-30 13:01:00 )\n",
       "End station: Garching-Forschungszentrum\n",
       "\n",
       "2022-11-30 13:00:00 - 2022-11-30 15:00:00 : Image Guided Surgery (IN2286) VI, Standardgruppe\n",
@@ -454,40 +443,44 @@
       "(FOOTWAY)  -  ( 2022-11-30 15:44:00 - 2022-11-30 15:47:00 )\n",
       "End station: Laim\n",
       "\n",
+      "2022-11-30 15:47:00 - 2022-11-30 16:47:00 : Reading\n",
+      "\n",
       "2022-11-30 17:00:00 - 2022-11-30 18:30:00 : Deutsch als Fremdsprache A2.1 SE, Keza GERMAN MATTERS (GAR Präsenz)\n",
       "\n",
-      "2022-11-30 22:40:00 - 2022-11-30 22:51:00 : Arrival\n",
+      "2022-11-30 22:16:00 - 2022-11-30 22:59:00 : Arrival\n",
       "--- Travel plan ---\n",
       "Start station: Garching-Forschungszentrum\n",
-      "(FOOTWAY)  -  ( 2022-11-30 22:40:00 - 2022-11-30 22:41:00 )\n",
-      "(TRANSPORTATION) 292 -  ( 2022-11-30 22:41:00 - 2022-11-30 22:48:00 )\n",
-      "(FOOTWAY)  -  ( 2022-11-30 22:48:00 - 2022-11-30 22:51:00 )\n",
-      "End station: Garching\n",
+      "(FOOTWAY)  -  ( 2022-11-30 22:16:00 - 2022-11-30 22:18:00 )\n",
+      "(TRANSPORTATION) U6 - Gleis 2 Ri Garching ( 2022-11-30 22:18:00 - 2022-11-30 22:38:00 )\n",
+      "(TRANSPORTATION) 59 - Pos. 2 ( 2022-11-30 22:49:00 - 2022-11-30 22:56:00 )\n",
+      "(FOOTWAY)  -  ( 2022-11-30 22:56:00 - 2022-11-30 22:59:00 )\n",
+      "End station: Hohenzollernplatz\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "request = {\"data\": [{\"name\": \"Exercise\", \"location\": \"Laim\", \"start_time\": None, \"end_time\": None, \"duration\": 30}],\n",
+    "request = {\"data\": [{\"name\": \"Reading\", \"location\": None, \"start_time\": None, \"end_time\": None, \"duration\": 60},\n",
+    "                    {\"name\": \"Exercise\", \"location\": \"Laim\", \"start_time\": None, \"end_time\": None, \"duration\": 30}],\n",
     "          \"departure_time\": datetime.strptime(\"2022-11-30 06:00:00\", \"%Y-%m-%d %H:%M:%S\"),\n",
     "          \"arrival_time\": datetime.strptime(\"2022-11-30 23:00:00\", \"%Y-%m-%d %H:%M:%S\"),\n",
     "          \"departure_place\": \"Hohenzollernplatz\",\n",
-    "          \"arrival_place\": \"Garching\"}\n",
+    "          \"arrival_place\": \"Hohenzollernplatz\"}\n",
     "schedule_json = get_schedule(request)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'name': 'Departure',\n",
-       "  'start_time': datetime.datetime(2022, 11, 30, 6, 3),\n",
+       "  'start_time': datetime.datetime(2022, 11, 30, 6, 0),\n",
        "  'end_time': datetime.datetime(2022, 11, 30, 6, 41),\n",
-       "  'duration': datetime.timedelta(seconds=2280),\n",
+       "  'duration': datetime.timedelta(seconds=2460),\n",
        "  'location': 'Garching-Forschungszentrum',\n",
        "  'travel_plan': {'model': ['FOOTWAY',\n",
        "    'TRANSPORTATION',\n",
@@ -532,31 +525,26 @@
        "    datetime.datetime(2022, 11, 30, 11, 44),\n",
        "    datetime.datetime(2022, 11, 30, 11, 47)]}},\n",
        " {'name': 'Exercise',\n",
-       "  'start_time': datetime.datetime(2022, 11, 30, 11, 43),\n",
-       "  'end_time': datetime.datetime(2022, 11, 30, 12, 13),\n",
+       "  'start_time': datetime.datetime(2022, 11, 30, 11, 47),\n",
+       "  'end_time': datetime.datetime(2022, 11, 30, 12, 17),\n",
        "  'duration': datetime.timedelta(seconds=1800),\n",
        "  'location': 'Laim',\n",
        "  'travel_plan': {'model': ['FOOTWAY',\n",
        "    'TRANSPORTATION',\n",
        "    'TRANSPORTATION',\n",
        "    'FOOTWAY'],\n",
-       "   'station_line': ['', 'S1', 'U6', ''],\n",
-       "   'platform': ['', '2', 'U-Bahn Gleis 1', ''],\n",
+       "   'station_line': ['', 'S3', 'U6', ''],\n",
+       "   'platform': ['', '3', 'U-Bahn Gleis 1', ''],\n",
        "   'start_station': 'Laim',\n",
        "   'end_station': 'Garching-Forschungszentrum',\n",
-       "   'departures': [datetime.datetime(2022, 11, 30, 12, 9),\n",
-       "    datetime.datetime(2022, 11, 30, 12, 10),\n",
-       "    datetime.datetime(2022, 11, 30, 12, 24),\n",
-       "    datetime.datetime(2022, 11, 30, 12, 49)],\n",
-       "   'arrivals': [datetime.datetime(2022, 11, 30, 12, 10),\n",
-       "    datetime.datetime(2022, 11, 30, 12, 20),\n",
-       "    datetime.datetime(2022, 11, 30, 12, 49),\n",
-       "    datetime.datetime(2022, 11, 30, 12, 51)]}},\n",
-       " {'name': 'Reading',\n",
-       "  'start_time': datetime.datetime(2022, 11, 30, 11, 47),\n",
-       "  'end_time': datetime.datetime(2022, 11, 30, 12, 47),\n",
-       "  'duration': datetime.timedelta(seconds=3600),\n",
-       "  'location': None},\n",
+       "   'departures': [datetime.datetime(2022, 11, 30, 12, 14),\n",
+       "    datetime.datetime(2022, 11, 30, 12, 16),\n",
+       "    datetime.datetime(2022, 11, 30, 12, 34),\n",
+       "    datetime.datetime(2022, 11, 30, 12, 59)],\n",
+       "   'arrivals': [datetime.datetime(2022, 11, 30, 12, 16),\n",
+       "    datetime.datetime(2022, 11, 30, 12, 26),\n",
+       "    datetime.datetime(2022, 11, 30, 12, 59),\n",
+       "    datetime.datetime(2022, 11, 30, 13, 1)]}},\n",
        " {'name': 'Image Guided Surgery (IN2286) VI, Standardgruppe',\n",
        "  'start_time': datetime.datetime(2022, 11, 30, 13, 0),\n",
        "  'end_time': datetime.datetime(2022, 11, 30, 15, 0),\n",
@@ -578,130 +566,46 @@
        "    datetime.datetime(2022, 11, 30, 15, 31),\n",
        "    datetime.datetime(2022, 11, 30, 15, 44),\n",
        "    datetime.datetime(2022, 11, 30, 15, 47)]}},\n",
+       " {'name': 'Reading',\n",
+       "  'start_time': datetime.datetime(2022, 11, 30, 15, 47),\n",
+       "  'end_time': datetime.datetime(2022, 11, 30, 16, 47),\n",
+       "  'duration': datetime.timedelta(seconds=3600),\n",
+       "  'location': None},\n",
        " {'name': 'Deutsch als Fremdsprache A2.1 SE, Keza GERMAN MATTERS (GAR Präsenz)',\n",
        "  'start_time': datetime.datetime(2022, 11, 30, 17, 0),\n",
        "  'end_time': datetime.datetime(2022, 11, 30, 18, 30),\n",
        "  'duration': datetime.timedelta(seconds=5400),\n",
        "  'location': 'Garching Forschungszentrum'},\n",
        " {'name': 'Arrival',\n",
-       "  'start_time': datetime.datetime(2022, 11, 30, 22, 40),\n",
-       "  'end_time': datetime.datetime(2022, 11, 30, 22, 51),\n",
-       "  'duration': datetime.timedelta(seconds=660),\n",
+       "  'start_time': datetime.datetime(2022, 11, 30, 22, 16),\n",
+       "  'end_time': datetime.datetime(2022, 11, 30, 22, 59),\n",
+       "  'duration': datetime.timedelta(seconds=2580),\n",
        "  'location': 'Garching-Forschungszentrum',\n",
-       "  'travel_plan': {'model': ['FOOTWAY', 'TRANSPORTATION', 'FOOTWAY'],\n",
-       "   'station_line': ['', '292', ''],\n",
-       "   'platform': ['', '', ''],\n",
+       "  'travel_plan': {'model': ['FOOTWAY',\n",
+       "    'TRANSPORTATION',\n",
+       "    'TRANSPORTATION',\n",
+       "    'FOOTWAY'],\n",
+       "   'station_line': ['', 'U6', '59', ''],\n",
+       "   'platform': ['', 'Gleis 2 Ri Garching', 'Pos. 2', ''],\n",
        "   'start_station': 'Garching-Forschungszentrum',\n",
-       "   'end_station': 'Garching',\n",
-       "   'departures': [datetime.datetime(2022, 11, 30, 22, 40),\n",
-       "    datetime.datetime(2022, 11, 30, 22, 41),\n",
-       "    datetime.datetime(2022, 11, 30, 22, 48)],\n",
-       "   'arrivals': [datetime.datetime(2022, 11, 30, 22, 41),\n",
-       "    datetime.datetime(2022, 11, 30, 22, 48),\n",
-       "    datetime.datetime(2022, 11, 30, 22, 51)]}}]"
+       "   'end_station': 'Hohenzollernplatz',\n",
+       "   'departures': [datetime.datetime(2022, 11, 30, 22, 16),\n",
+       "    datetime.datetime(2022, 11, 30, 22, 18),\n",
+       "    datetime.datetime(2022, 11, 30, 22, 49),\n",
+       "    datetime.datetime(2022, 11, 30, 22, 56)],\n",
+       "   'arrivals': [datetime.datetime(2022, 11, 30, 22, 18),\n",
+       "    datetime.datetime(2022, 11, 30, 22, 38),\n",
+       "    datetime.datetime(2022, 11, 30, 22, 56),\n",
+       "    datetime.datetime(2022, 11, 30, 22, 59)]}}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "schedule_json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start = \"Hohenzollernplatz\"\n",
-    "dest = \"Garching\"\n",
-    "route = generate_route(start=start, dest=dest)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'start_time': datetime.datetime(2022, 11, 20, 4, 3),\n",
-       " 'end_time': datetime.datetime(2022, 11, 20, 4, 56),\n",
-       " 'model': ['FOOTWAY', 'TRANSPORTATION', 'TRANSPORTATION', 'FOOTWAY'],\n",
-       " 'station_line': ['', 'N43', 'U6', ''],\n",
-       " 'platform': ['', '', 'Gleis 1', ''],\n",
-       " 'start_station': 'Hohenzollernplatz',\n",
-       " 'end_station': 'Garching',\n",
-       " 'departures': [datetime.datetime(2022, 11, 20, 4, 3),\n",
-       "  datetime.datetime(2022, 11, 20, 4, 8),\n",
-       "  datetime.datetime(2022, 11, 20, 4, 38),\n",
-       "  datetime.datetime(2022, 11, 20, 4, 55)],\n",
-       " 'arrivals': [datetime.datetime(2022, 11, 20, 4, 8),\n",
-       "  datetime.datetime(2022, 11, 20, 4, 13),\n",
-       "  datetime.datetime(2022, 11, 20, 4, 55),\n",
-       "  datetime.datetime(2022, 11, 20, 4, 56)],\n",
-       " 'duration': datetime.timedelta(seconds=3180)}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "route"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[datetime.datetime(2022, 11, 20, 4, 3),\n",
-       " datetime.datetime(2022, 11, 20, 4, 8),\n",
-       " datetime.datetime(2022, 11, 20, 4, 38),\n",
-       " datetime.datetime(2022, 11, 20, 4, 55)]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "route[\"departures\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[datetime.datetime(2022, 11, 20, 4, 8),\n",
-       " datetime.datetime(2022, 11, 20, 4, 13),\n",
-       " datetime.datetime(2022, 11, 20, 4, 55),\n",
-       " datetime.datetime(2022, 11, 20, 4, 56)]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "route[\"arrivals\"]"
    ]
   },
   {
