--- a/scheduler/playground.ipynb
+++ b/scheduler/playground.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,10 +79,10 @@
     "    platform = []\n",
     "    departures = []\n",
     "    arrivals = []\n",
-    "    name_of_station_start = None\n",
+    "    name_of_station_start = []\n",
     "    lock1 = 0\n",
     "    lock2 = 0\n",
-    "    name_of_station_dest = None\n",
+    "    name_of_station_dest = []\n",
     "    \n",
     "    for i in range(len(routes[route_choose][\"connectionPartList\"])):\n",
     "        mod = routes[route_choose][\"connectionPartList\"][i][\"connectionPartType\"]\n",
@@ -105,14 +105,14 @@
     "            arrivals.append(datetime.fromtimestamp(routes[route_choose][\"connectionPartList\"][i][\"arrival\"] / 1000))\n",
     "\n",
     "        if \"name\" in routes[route_choose][\"connectionPartList\"][i][\"from\"]:\n",
-    "            if lock1 == 0:\n",
-    "                name_of_station_start = routes[route_choose][\"connectionPartList\"][i][\"from\"][\"name\"]\n",
-    "                lock1 = 1\n",
+    "            name_of_station_start.append(routes[route_choose][\"connectionPartList\"][i][\"from\"][\"name\"])\n",
+    "        else:\n",
+    "            name_of_station_start.append(\"\")\n",
     "\n",
-    "        if \"name\" in routes[route_choose][\"connectionPartList\"][-1-i][\"to\"]:\n",
-    "            if lock2 == 0:\n",
-    "                name_of_station_dest = routes[route_choose][\"connectionPartList\"][-1-i][\"to\"][\"name\"]\n",
-    "                lock2 = 1\n",
+    "        if \"name\" in routes[route_choose][\"connectionPartList\"][i][\"to\"]:\n",
+    "            name_of_station_dest.append(routes[route_choose][\"connectionPartList\"][i][\"to\"][\"name\"])\n",
+    "        else:\n",
+    "            name_of_station_dest.append(\"\")\n",
     "\t    \n",
     "#     route_json = pprint.pformat(routes[-1]).replace(\"'\", '\"')\n",
     "#     with open('route.json', 'w') as f:\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,14 +154,23 @@
     "        print(\"End station:\", self.end_station)\n",
     "    \n",
     "    def convert_to_json(self):\n",
-    "        return {\"model\": self.model, \"station_line\": self.station_line, \"platform\": self.platform,\n",
-    "               \"start_station\": self.start_station, \"end_station\": self.end_station,\n",
-    "               \"departures\": self.departures, \"arrivals\": self.arrivals}"
+    "        travel_plan = {\"plan\": []}\n",
+    "        for i in range(len(self.model)):\n",
+    "            travel_plan[\"plan\"].append({\"model\": self.model[i], \"station_line\": self.station_line[i],\n",
+    "                                        \"platform\": self.platform[i],\n",
+    "                                       \"start_station\": self.start_station[i],\n",
+    "                                        \"end_station\": self.end_station[i],\n",
+    "                                        \"departure\": self.departures[i],\n",
+    "                                       \"arrival\": self.arrivals[i]})\n",
+    "        return travel_plan\n",
+    "#         return {\"model\": self.model, \"station_line\": self.station_line, \"platform\": self.platform,\n",
+    "#                \"start_station\": self.start_station, \"end_station\": self.end_station,\n",
+    "#                \"departures\": self.departures, \"arrivals\": self.arrivals}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,38 +425,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time 2022-11-30 11:00:00\n",
-      "time 2022-11-30 12:17:00\n",
-      "time 2022-11-30 15:00:00\n",
-      "time 2022-11-30 16:17:00\n",
-      "time 2022-11-30 18:30:00\n",
-      "time 2022-11-30 19:41:00\n",
-      "time 2022-11-30 11:00:00\n",
-      "time 2022-11-30 13:42:00\n",
-      "time 2022-11-30 15:00:00\n",
-      "time 2022-11-30 17:42:00\n",
-      "time 2022-11-30 19:41:00\n",
-      "time 2022-11-30 08:00:00\n",
-      "end_time 2022-11-30 08:01:00\n",
-      "end_time 2022-11-30 08:01:00\n",
-      "end_time 2022-11-30 07:55:00\n",
       "2022-11-30 07:19:00 - 2022-11-30 07:55:00 : Departure\n",
       "--- Travel plan ---\n",
-      "Start station: Hohenzollernplatz\n",
+      "Start station: ['', 'Hohenzollernplatz', 'Scheidplatz', 'Petuelring', 'Münchner Freiheit', 'Garching-Forschungszentrum']\n",
       "(FOOTWAY)  -  ( 2022-11-30 07:19:00 - 2022-11-30 07:23:00 )\n",
       "(TRANSPORTATION) U2 - Gleis 1 ( 2022-11-30 07:23:00 - 2022-11-30 07:25:00 )\n",
       "(TRANSPORTATION) U3 - Gleis 1 ( 2022-11-30 07:25:00 - 2022-11-30 07:26:00 )\n",
       "(TRANSPORTATION) U3 - Gleis 2 ( 2022-11-30 07:27:00 - 2022-11-30 07:31:00 )\n",
       "(TRANSPORTATION) U6 - Gleis 1 ( 2022-11-30 07:33:00 - 2022-11-30 07:53:00 )\n",
       "(FOOTWAY)  -  ( 2022-11-30 07:53:00 - 2022-11-30 07:55:00 )\n",
-      "End station: Garching-Forschungszentrum\n",
+      "End station: ['Hohenzollernplatz', 'Scheidplatz', 'Petuelring', 'Münchner Freiheit', 'Garching-Forschungszentrum', '']\n",
       "\n",
       "2022-11-30 08:00:00 - 2022-11-30 09:00:00 : Übung zu Quantentechnologie UE, Gruppe 1 Johannes Früh\n",
       "\n",
@@ -457,21 +451,21 @@
       "\n",
       "2022-11-30 17:00:00 - 2022-11-30 18:30:00 : Deutsch als Fremdsprache A2.1 SE, Keza GERMAN MATTERS (GAR Präsenz)\n",
       "--- Travel plan ---\n",
-      "Start station: Garching-Forschungszentrum\n",
+      "Start station: ['', 'Garching-Forschungszentrum', 'Marienplatz', 'Laim']\n",
       "(FOOTWAY)  -  ( 2022-11-30 18:28:00 - 2022-11-30 18:30:00 )\n",
       "(TRANSPORTATION) U6 - Gleis 1 Ausstieg ( 2022-11-30 18:30:00 - 2022-11-30 18:55:00 )\n",
       "(TRANSPORTATION) S4 - 2 ( 2022-11-30 18:58:00 - 2022-11-30 19:08:00 )\n",
       "(FOOTWAY)  -  ( 2022-11-30 19:08:00 - 2022-11-30 19:11:00 )\n",
-      "End station: Laim\n",
+      "End station: ['Garching-Forschungszentrum', 'Marienplatz', 'Laim', '']\n",
       "\n",
       "2022-11-30 19:11:00 - 2022-11-30 19:41:00 : Exercise\n",
       "--- Travel plan ---\n",
-      "Start station: Laim\n",
+      "Start station: ['', 'Laim', 'Hauptbahnhof', 'Hohenzollernplatz']\n",
       "(FOOTWAY)  -  ( 2022-11-30 19:40:00 - 2022-11-30 19:42:00 )\n",
       "(TRANSPORTATION) S6 - 3 ( 2022-11-30 19:42:00 - 2022-11-30 19:49:00 )\n",
       "(TRANSPORTATION) U2 - U2/8 Gleis 1 ( 2022-11-30 19:54:00 - 2022-11-30 19:59:00 )\n",
       "(FOOTWAY)  -  ( 2022-11-30 19:59:00 - 2022-11-30 20:03:00 )\n",
-      "End station: Hohenzollernplatz\n",
+      "End station: ['Laim', 'Hauptbahnhof', 'Hohenzollernplatz', '']\n",
       "\n",
       "2022-11-30 20:03:00 - 2022-11-30 22:03:00 : Laundry\n",
       "\n"
@@ -490,10 +484,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Departure',\n",
+       "  'start_time': datetime.datetime(2022, 11, 30, 7, 19),\n",
+       "  'end_time': datetime.datetime(2022, 11, 30, 7, 55),\n",
+       "  'duration': datetime.timedelta(seconds=2160),\n",
+       "  'location': ['Hohenzollernplatz',\n",
+       "   'Scheidplatz',\n",
+       "   'Petuelring',\n",
+       "   'Münchner Freiheit',\n",
+       "   'Garching-Forschungszentrum',\n",
+       "   ''],\n",
+       "  'travel_plan': {'plan': [('FOOTWAY',\n",
+       "     '',\n",
+       "     '',\n",
+       "     '',\n",
+       "     'Hohenzollernplatz',\n",
+       "     datetime.datetime(2022, 11, 30, 7, 19),\n",
+       "     datetime.datetime(2022, 11, 30, 7, 23)),\n",
+       "    ('TRANSPORTATION',\n",
+       "     'U2',\n",
+       "     'Gleis 1',\n",
+       "     'Hohenzollernplatz',\n",
+       "     'Scheidplatz',\n",
+       "     datetime.datetime(2022, 11, 30, 7, 23),\n",
+       "     datetime.datetime(2022, 11, 30, 7, 25)),\n",
+       "    ('TRANSPORTATION',\n",
+       "     'U3',\n",
+       "     'Gleis 1',\n",
+       "     'Scheidplatz',\n",
+       "     'Petuelring',\n",
+       "     datetime.datetime(2022, 11, 30, 7, 25),\n",
+       "     datetime.datetime(2022, 11, 30, 7, 26)),\n",
+       "    ('TRANSPORTATION',\n",
+       "     'U3',\n",
+       "     'Gleis 2',\n",
+       "     'Petuelring',\n",
+       "     'Münchner Freiheit',\n",
+       "     datetime.datetime(2022, 11, 30, 7, 27),\n",
+       "     datetime.datetime(2022, 11, 30, 7, 31)),\n",
+       "    ('TRANSPORTATION',\n",
+       "     'U6',\n",
+       "     'Gleis 1',\n",
+       "     'Münchner Freiheit',\n",
+       "     'Garching-Forschungszentrum',\n",
+       "     datetime.datetime(2022, 11, 30, 7, 33),\n",
+       "     datetime.datetime(2022, 11, 30, 7, 53)),\n",
+       "    ('FOOTWAY',\n",
+       "     '',\n",
+       "     '',\n",
+       "     'Garching-Forschungszentrum',\n",
+       "     '',\n",
+       "     datetime.datetime(2022, 11, 30, 7, 53),\n",
+       "     datetime.datetime(2022, 11, 30, 7, 55))]}},\n",
+       " {'name': 'Übung zu Quantentechnologie UE, Gruppe 1 Johannes Früh',\n",
+       "  'start_time': datetime.datetime(2022, 11, 30, 8, 0),\n",
+       "  'end_time': datetime.datetime(2022, 11, 30, 9, 0),\n",
+       "  'duration': datetime.timedelta(seconds=3600),\n",
+       "  'location': 'Garching Forschungszentrum'},\n",
+       " {'name': 'Quantentechnologie VO, Standardgruppe',\n",
+       "  'start_time': datetime.datetime(2022, 11, 30, 9, 0),\n",
+       "  'end_time': datetime.datetime(2022, 11, 30, 11, 0),\n",
+       "  'duration': datetime.timedelta(seconds=7200),\n",
+       "  'location': 'Garching Forschungszentrum'},\n",
+       " {'name': 'Image Guided Surgery (IN2286) VI, Standardgruppe',\n",
+       "  'start_time': datetime.datetime(2022, 11, 30, 13, 0),\n",
+       "  'end_time': datetime.datetime(2022, 11, 30, 15, 0),\n",
+       "  'duration': datetime.timedelta(seconds=7200),\n",
+       "  'location': 'Garching Forschungszentrum'},\n",
+       " {'name': 'Deutsch als Fremdsprache A2.1 SE, Keza GERMAN MATTERS (GAR Präsenz)',\n",
+       "  'start_time': datetime.datetime(2022, 11, 30, 17, 0),\n",
+       "  'end_time': datetime.datetime(2022, 11, 30, 18, 30),\n",
+       "  'duration': datetime.timedelta(seconds=5400),\n",
+       "  'location': 'Garching Forschungszentrum',\n",
+       "  'travel_plan': {'plan': [('FOOTWAY',\n",
+       "     '',\n",
+       "     '',\n",
+       "     '',\n",
+       "     'Garching-Forschungszentrum',\n",
+       "     datetime.datetime(2022, 11, 30, 18, 28),\n",
+       "     datetime.datetime(2022, 11, 30, 18, 30)),\n",
+       "    ('TRANSPORTATION',\n",
+       "     'U6',\n",
+       "     'Gleis 1 Ausstieg',\n",
+       "     'Garching-Forschungszentrum',\n",
+       "     'Marienplatz',\n",
+       "     datetime.datetime(2022, 11, 30, 18, 30),\n",
+       "     datetime.datetime(2022, 11, 30, 18, 55)),\n",
+       "    ('TRANSPORTATION',\n",
+       "     'S4',\n",
+       "     '2',\n",
+       "     'Marienplatz',\n",
+       "     'Laim',\n",
+       "     datetime.datetime(2022, 11, 30, 18, 58),\n",
+       "     datetime.datetime(2022, 11, 30, 19, 8)),\n",
+       "    ('FOOTWAY',\n",
+       "     '',\n",
+       "     '',\n",
+       "     'Laim',\n",
+       "     '',\n",
+       "     datetime.datetime(2022, 11, 30, 19, 8),\n",
+       "     datetime.datetime(2022, 11, 30, 19, 11))]}},\n",
+       " {'name': 'Exercise',\n",
+       "  'start_time': datetime.datetime(2022, 11, 30, 19, 11),\n",
+       "  'end_time': datetime.datetime(2022, 11, 30, 19, 41),\n",
+       "  'duration': datetime.timedelta(seconds=1800),\n",
+       "  'location': 'Laim',\n",
+       "  'travel_plan': {'plan': [('FOOTWAY',\n",
+       "     '',\n",
+       "     '',\n",
+       "     '',\n",
+       "     'Laim',\n",
+       "     datetime.datetime(2022, 11, 30, 19, 40),\n",
+       "     datetime.datetime(2022, 11, 30, 19, 42)),\n",
+       "    ('TRANSPORTATION',\n",
+       "     'S6',\n",
+       "     '3',\n",
+       "     'Laim',\n",
+       "     'Hauptbahnhof',\n",
+       "     datetime.datetime(2022, 11, 30, 19, 42),\n",
+       "     datetime.datetime(2022, 11, 30, 19, 49)),\n",
+       "    ('TRANSPORTATION',\n",
+       "     'U2',\n",
+       "     'U2/8 Gleis 1',\n",
+       "     'Hauptbahnhof',\n",
+       "     'Hohenzollernplatz',\n",
+       "     datetime.datetime(2022, 11, 30, 19, 54),\n",
+       "     datetime.datetime(2022, 11, 30, 19, 59)),\n",
+       "    ('FOOTWAY',\n",
+       "     '',\n",
+       "     '',\n",
+       "     'Hohenzollernplatz',\n",
+       "     '',\n",
+       "     datetime.datetime(2022, 11, 30, 19, 59),\n",
+       "     datetime.datetime(2022, 11, 30, 20, 3))]}},\n",
+       " {'name': 'Laundry',\n",
+       "  'start_time': datetime.datetime(2022, 11, 30, 20, 3),\n",
+       "  'end_time': datetime.datetime(2022, 11, 30, 22, 3),\n",
+       "  'duration': datetime.timedelta(seconds=7200),\n",
+       "  'location': 'Hohenzollernplatz'}]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "schedule_json"
+   ]
   },
   {
    "cell_type": "code",
